--- a/.github/workflows/build-and-push-bskyweb-ghcr.yaml
+++ b/.github/workflows/build-and-push-bskyweb-ghcr.yaml
@@ -7,7 +7,7 @@ on:
 env:
   REGISTRY: ghcr.io
   USERNAME: ${{ github.actor }}
-  PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+  PASSWORD: ${{ secrets.TOKEN }}
 
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
